# bevy06_rythm_game

./: Cargo.toml  README.md
src/: arrows.rs  audio.rs  consts.rs  main.rs  score.rs  types.rs  ui.rs
