[package]
name = "rythm_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.0"
toml = "0.5.8"
serde = "1.0.136"
serde_derive = "1.0.136"
kira = "0.6.0-beta.5"
kira-cpal = "0.1.0-beta.0"
kira-loaders = "0.1.0-beta.3"